--- a/css/styles.css
+++ b/css/styles.css
@@ -670,13 +670,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 1;
+    opacity: 0;
+    visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms ease-in-out;
 }
 
 .modal-overlay.is-open {
     opacity: 1;
+    visibility: visible;
     pointer-events: auto;
 }
 
@@ -686,8 +688,9 @@ body {
     height: 584px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     position: relative;
+    box-sizing: border-box;
 }
 
 .close-btn {
@@ -731,7 +734,6 @@ body {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 32px;
     margin-bottom: 16px;
 }
 
@@ -781,7 +783,7 @@ body {
     outline: none;
 }
 
-.icon {
+.modal-icon {
     padding: 3px 0px;
     width: 18px;
     height: 24px;
@@ -791,8 +793,8 @@ body {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-box:hover .icon,
-.input-box:focus-within .icon {
+.input-box:hover .modal-icon,
+.input-box:focus-within .modal-icon {
     fill: #4d5ae5;
 }
 
@@ -846,10 +848,6 @@ body {
     display: flex;
     align-items: center;
 }
-
-.check-input {}
-
-.visually-hidden {}
 
 .check-text {
     font-weight: 400;
