--- a/css/styles.css
+++ b/css/styles.css
@@ -760,59 +760,38 @@ body {
 }
 
 .input-box {
-    margin-top: 0;
     position: relative;
+}
+
+.form-input {
     display: flex;
-    align-items: center;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     width: 360px;
     height: 40px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-left: 45px;
+    outline: transparent;
 }
 
-.input-box:hover,
-.input-box:focus-within {
+.form-input:hover,
+.form-input:focus {
     border-color: #4d5ae5;
 }
 
-.form-input {
-    border: none;
-    width: 100%;
-    height: 100%;
-    padding-left: 45px;
-    outline: none;
-}
-
 .modal-icon {
-    padding: 3px 0px;
-    width: 18px;
-    height: 24px;
     position: absolute;
     fill: #2e2f42;  
     left: 16px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-.input-box:hover .modal-icon,
-.input-box:focus-within .modal-icon {
+.form-input:hover + .modal-icon,
+.form-input:focus + .modal-icon {
     fill: #4d5ae5;
-}
-
-.line {
-    position: absolute;
-    left: 38px;
-    border: 1.25px solid #2e2f42;
-    width: 18px;
-    height: 0px;
-    transform: rotate(-90deg);
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input-box:hover .line,
-.input-box:focus-within .line {
-    opacity: 1;
 }
 
 .textarea-box {
